--- a/LaTeX/Undervejs/solutiononthemarked.tex
+++ b/LaTeX/Undervejs/solutiononthemarked.tex
@@ -13,30 +13,43 @@ First a look into these lists and guides and the more advance solution thereafte
 
 Packing pro is an app developed for the Iphone and Ipad that offers templates for check lists to the customer. Iphone is a smart phone and the brand is owned by Apple. Packing Pro uses a touch interface which means that the user by using the finger can navigate around. This is possible because Iphone and Ipad support touch navigation.
 
-Packing pro is designed with a panel in the bottom of the screen that allows the user navigate through the menus. Packing Pro provides the user with a help menu that contain information on how to use the app. There is also a menu in where the user can charge color theme of the app.
+Packing pro is designed with a panel in the bottom of the screen that allows the user navigate through the menus. Packing Pro provides the user with a help menu that contain information on how to use the app. There is also a menu in where the user can charge color theme of the app. (billede indsættes)
 
 These templates are designed to different purposes regarding the customer, gender, type of trip, and purpose of the trip.
 The customer can then load the wanted template for the purpose. The user also have the possibility to create their own lists by adding things that should be remembered for the trip by them self. The user also have possibility to select an existing list and delete the objects that were found irrelevant by the user. The user can then check object on the lists off as it get packed.
 
-Packing Pro is a management tool that helps the customer get an overview of all the things to remember. As the name implies(pro) the app have to be bought before it can be used \citep{packingpro}.
+Packing Pro is a management tool that helps the customer get an overview of all the things to remember. As the name implies(pro) the app have to be bought before it can be used  \citep{packingpro}.
 
-Packing Pro works as check list and help the user remember what to pack, but it does not preform any organization of luggages content itself. So Packing Pro itself does not solve the described problem but helps the user remembering what to pack. So a feature to use from this program is the check list function that gives the user an overview of to pack.
-A function that would be needed is the complility with Iphone/Ipad operating system. But it would be nice if the program made to work cross platforms but it is still not required.
+Packing Pro works as check list and help the user remember what to pack, but it does not preform any organization of luggages content itself. So Packing Pro itself does not solve the described problem but helps the user remembering what to pack. So a feature to use from this program is the check list function that gives the user an overview of things to pack.
+A function that would not be needed is the compatible with Iphone/Ipad operating system. It would be nice if the program made work cross platforms but it is still not required to solve the problem.
 
 \subsection*{App - Checkmark Packlist}
 
-Checkmark Packlist offers different kinds of templates like Packing Pro. Between these two products there are almost no variation expect for the applications GUI(graphical user interface). This is also an app for the smart phone and thereby easy to access and use.
-This app needs additional software to work and thereby slightly more annoying for the customer to use this product. The customer will also have to pay an additional price to get the full product \citep{checkpacklist}.
+Checkmark Packlist is an free app for the smart phones running the Android system.
+Android is an operating system for smart phones. The Android is created by Google and are used by smart phone manufacturers as HTC and Sony. Android also have a tablet edition for the record.
+
+Checkmark Packlist offers different templates for check lists that the customer can use. One of these templates is the list for packing for a trip. That way the customer can select and use this template for remembering what they will need to pack for the trip. Checkmark Packlist uses touch to navigated in the program. This means that the customer with their fingers can navigated through the check list and check off things that have been packed. (billede indsættes)
+
+Checkmark Packlist does not provide customization tool that let the customer add more categories to the check list. This is only a featured provided in the paid version of Checkmark Packlist \citep{checkpacklist}.
+
+This app does not provide a solid solution to the found problem but helps the user remembering what there should be packed for trip. This check list feature give a guiding effect and this is a useful feature and can be used in the product design to solve the state problem. A feature to consider is the mobility by designing the program for hand held devices.
 
 \subsection*{Online check/tip list}
-The online check list works as a reminder when packing luggage. It also give tips and tricks that could be considered when packing for the trip. There exists a lot of different websites offering this service for free. Some are posted by an organization and others by a person on a forum.
-\citep{onlinecheck} is an example of this kind of website. This website offers a list of 10 tips that can be helpful for the customer when they are packing for a trip. The site does not help with the actual packing, instead it helps with the planing of materials that the user might want to have on the trip.
+
+The online check list works as a reminder when packing luggage. It also give tips and tricks that could be considered when packing for the trip. There exists a lot of different websites offering this service for free. Some are posted by an organization and others by a person on a forum. This means that all electronic devices as computers, tablets, and smart phones that have access to the Internet can open the website address.
+An example of this kind of website is the following source \citep{onlinecheck}. This website offers a list of 10 tips that can be helpful for the customer when they are packing for a trip. The site does not help with the actual packing, instead it helps with the planing of materials that the user might want to have on the trip.
+The website is design with a menu left that let the user navigate through the different content of the website. (billede indsættes)
+
+The online check/tip list in itself does not give the customer a solution to the packing problem. The websites instead help the customer planing the trip and thereby no the actual problem. The type of check/tip list used on \citep{onlinecheck} does not apply as a useful feature that could be used in the final program. Instead it would more be focus on helping the user with the packing.
 
 \subsection*{The e-Commerce shipping calculator}
 
 The e-Commerce shipping calculator is an advanced program that helps the customer packing large containers and calculates the price of the shipment.
-By typing the size, weight, location, and destination of the items that should be shipped, the program can calculate what the prize is going to be and generates a 3D(3 dimensional) model of the container where the given items are placed in the best possible way so there are a minimum of wasted space. On their website \citep{solvingmaze} they offer a demo(demonstration) of their program.
+By typing the size, weight, location, and destination of the items that should be shipped, the program can calculate what the prize is going to be and generates a 3D(3 dimensional) model of the container where the given items are placed in the best possible way so there are a minimum of wasted space. On their website \citep{solvingmaze} they offer a demo(demonstration) of their program. Their demo runs through the web browser and thereby should be accessible from computers connected to the internet.
+The demo is design to have the containers dimension variables and weight limit as input fields. Under the container is there are list of item where each item can have different dimensions and weights. To right of these field is the 3d model placed that will be generated.
+The customer have to type all known data in and press "Calculate Rates" and the program will then form a 3d model, this can be seen on screen dump (billede indsættes).
 
+This product have a list
 \subsection*{Solutions coverages of the requirements}
 
 In this section there will be looked into what the different existing programs features and compare them to the requirements that have been set to solve the given problem. The comparison will be in the form of a table that gives an overview of the coverage of the requirements. The table will be used to conclude if there is already a program that solves this problem.
