--- a/trunk/LaTeX/Undervejs/solutiononthemarked.tex
+++ b/trunk/LaTeX/Undervejs/solutiononthemarked.tex
@@ -15,7 +15,7 @@ Packing pro is an app developed for the Iphone and Ipad that offers templates fo
 
 Packing pro is designed with a panel in the bottom of the screen that allows the user navigate through the menus. Packing Pro provides the user with a help menu that contain information on how to use the app. There is also a menu in where the user can charge color theme of the app. On figure: \ref{fig:ipack} can an example of how a check list could look like.
 
-\figur{}{Iphone.JPG}{Picture of 2 of Packing Pros menus from \citep{ipack}}{fig:ipack}
+\figur{0.8}{Iphone.JPG}{Picture of 2 of Packing Pros menus from \citep{ipack}}{fig:ipack}
 
 These templates are designed to different purposes regarding the customer, gender, type of trip, and purpose of the trip.
 The customer can then load the wanted template for the purpose. The user also have the possibility to create their own lists by adding things that should be remembered for the trip by them self. The user also have possibility to select an existing list and delete the objects that were found irrelevant by the user. The user can then check object on the lists off as it get packed. Packing Pro is a management tool that helps the customer get an overview of all the things to remember. As the name implies(pro) the app have to be bought before it can be used  \citep{packingpro}.
@@ -28,7 +28,7 @@ A function that would not be needed is the compatible with Iphone/Ipad operating
 Checkmark Packlist is an free app for the smart phones running the Android system.
 Checkmark Packlist offers different templates for check lists that the customer can use. One of these templates is the list for packing for a trip. That way the customer can select and use this template for remembering what they will need to pack for the trip. Checkmark Packlist uses touch to navigated in the program. This means that the customer with their fingers can navigated through the check list and check off things that have been packed.
 
-\figur{}{checkmark.JPG}{Picture of the Checkmark Packlist in action from \citep{checkparklist}}{fig:checkmark}
+\figur{0.4}{checkmark.JPG}{Picture of the Checkmark Packlist in action from \citep{checkparklist}}{fig:checkmark}
 
 Checkmark Packlist does not provide customization tool that let the customer add more categories to the check list. This is only a featured provided in the paid version of Checkmark Packlist \citep{checkpacklist}.
 
@@ -41,7 +41,7 @@ An example of this kind of website is the following source \citep{onlinecheck}. 
 The site does not help with the actual packing, instead it helps with the planing of materials that the user might want to have on the trip.
 The website is design with a menu left that let the user navigate through the different content of the website.
 
-\figur{}{tip.JPG}{Screen shot of \citep{onlinecheck} where they have posted 10 tips}{fig:check}
+\figur{0.6}{tip.JPG}{Screen shot of \citep{onlinecheck} where they have posted 10 tips}{fig:check}
 
 The online check/tip list in itself does not give the customer a solution to the packing problem. The websites instead help the customer planing the trip and thereby no the actual problem. The type of check/tip list used on \citep{onlinecheck} does not apply as a useful feature that could be used in the final program. Instead it would more be focus on helping the user with the packing.
 
@@ -52,7 +52,7 @@ By typing the size, weight, location, and destination of the items that should b
 The demo is design to have the containers dimension variables and weight limit as input fields. Under the container is there are list of item where each item can have different dimensions and weights. To right of these field is the 3d model placed that will be generated.
 The customer have to type all known data in and press "Calculate Rates" and the program will then form a 3d model, this can be seen on figure: \ref{fig:calculator}.
 
-\figur{}{shippingcalculator.JPG}{Screen shot of the program running taken from \citep{solvingmaze}}{fig:calculator}
+\figur{0.6}{shippingcalculator.JPG}{Screen shot of the program running taken from \citep{solvingmaze}}{fig:calculator}
 
 This product have a number of useful features that can be used in the final product. This solution can take items dimensions and weight and calculate the most optimal placement in the container. This can be related to packing your luggage for a trip. So a feature to have in the final product is to  calculate somewhat most effective way to pack the users luggage. Another useful feature is that this solution also shows it to the user. So the final product most inform the user in similar or another way how the luggage should be pack.
 
