--- a/trunk/LaTeX/Undervejs/solutiononthemarked.tex
+++ b/trunk/LaTeX/Undervejs/solutiononthemarked.tex
@@ -56,9 +56,14 @@ The customer have to type all known data in and press "Calculate Rates" and the 
 
 This product have a number of useful features that can be used in the final product. This solution can take items dimensions and weight and calculate the most optimal placement in the container. This can be related to packing your luggage for a trip. So a feature to have in the final product is to  calculate somewhat most effective way to pack the users luggage. Another useful feature is that this solution also shows it to the user. So the final product most inform the user in similar or another way how the luggage should be pack.
 
-\subsection*{Solutions coverages of the requirements}
+\subsection*{Recapitulation}
 
-In this section there will be looked into what the different existing programs features and compare them to the requirements that have been set to solve the given problem. The comparison will be in the form of a table that gives an overview of the coverage of the requirements. The table will be used to conclude if there is already a program that solves this problem.
+This section main object is to look at the wanted features and recap them in a table.
+Packing Pro and Checkmark Packlist is similar in the way that they helps the user. They both provide the user with a sort of check list that can be check off and thereby help the customer remember what have not been packed yet.
+One of the difference is that Packing Pro have a price while Checkmark Packlist is free. But this difference means that Packing Pro allows the user to edit the check list while that are not possible in Checkmark Packlist.
+These two apps do not help the user arrange the luggage content or take in consideration of size and weight of it. Thereby is two apps do not help people with the packing itself but more what should be remembered for the trip.
+The online check/tip list provide the user with advices for the trip and what to pack. Advices are great to get a general idea of what to take pack but it still does not give a more effective way to pack.
+The e-Commerce shipping calculator is the one solution with the most wanted features. One of the strong feature that can be used is the ability to calculate the most effective that a container should be packed. A important side note is that the intentions is not to pack bags but the feature can be related to packing content of a bag.
 
 \begin{table}[H]
 \begin{center}
@@ -67,18 +72,16 @@ In this section there will be looked into what the different existing programs f
 Guide the user & & x & x & x & x   \\ \hline
 Distribute weight &  &   &   &   & x    \\ \hline
 Distribute space  &  &   &   &   & x    \\ \hline
-Account for the trips length  & &  x  &  x  &  x  &  x  \\ \hline
 On the road   &  &  x  &  x  &   &  x  \\ \hline
 Baggage rules  &  &    &    &   &   \\ \hline
 Where in the suitcase  &  &   &   &   &  x   \\ \hline
-Solid/liquid/bendable shapes &  &  &   &   &   \\ \hline
 Packing list &  & x & x &   & x    \\ \hline
 
 \end{tabular}
 \end{center}
-\caption{ Table for the different products on the market compared to the requirement seen in section \ref{sec:spec}}
+\caption{ Table for the different products on the market compared to features}
 \label{tab:OtherPrograms}
 \end{table}
 
-On table: \ref{tab:OtherPrograms} it can be concluded that none of the found program fully covers the requirements set to solve the problem at hand.
-Therefore it can be conclude it is relevant to work with this problem and try to solve it.
+Table: \ref{tab:OtherPrograms} consists of features down the y-akse and exiting solution on the market out the x-akse. The crosses indicates when the particular product has the particular feature. The purpose of the table is to give a overview of the products compared to features that was found essential to the problem.
+Table: \ref{tab:OtherPrograms} shows that none of the exiting solution does not take rules regarding baggage. It also shows that there are a lot of help regarding what to bring but when it comes to packing it is only one of the selected solution that had this feature.
