--- a/LaTeX/Skal sættes i rapport/problem.tex
+++ b/LaTeX/Skal sættes i rapport/problem.tex
@@ -16,15 +16,15 @@ To avoid this fee it can be an advantage to pack the suitcases properly and limi
 
 \subsection*{Packing}
 
-Because of the weight and size restrictions it can sometimes be difficult to get all the items you want to bring into a small enough suitcase and not exceed the allowed weight. It can sometimes be necessary to acquire more suitcases for the trip or leaving some of the items you wanted to bring. 
-Bringing more luggage means you have to pay more to get the extra luggage with you on the plane. A way you might be able to avoid buying and paying for extra suitcases is to pack the suitcases more compact. This on the other hand increases the bags weight \citep{altombag}. This should be thought through because too much weight can be unhealthy to carry around if not done correctly. 
+Because of the weight and size restrictions at the airports it can sometimes be difficult to get all the items you want to bring into a small enough suitcase and not exceed the allowed weight. It can sometimes be necessary to acquire more suitcases for the trip or leaving some of the items you wanted to bring. 
+Bringing more luggage means you have to pay more to get the extra luggage with you on the plane. A way you might be able to avoid buying and paying for extra suitcases is to pack the suitcases more compact. This on the other hand increases the bags weight \citep{altombag}. This should be thought through because too much weight can be unhealthy to carry around if the luggage is packed to heavily.
 
 The increased weight means the bags might exceed the limit for weight and therefore trigger a fee for overweight luggage.
 It seems people often pack their luggage more compact instead of taking extra bags with them on vacation. Generally people take a lot with them on vacation and they might not have packed their luggage the most effective way \citep{airstat}.
 
-\citep{airstat} shows the amount of fees given in context to luggage that have been registered at the U.S. airlines. Through these statistics it is possible to see, \textbf{there are people that exceeds the set of limits given by the airline.} A note regarding this source is that the size of the fee is a combination of the different rules and related fees. Therefore the statistics do not give an accurate image of the problem with weight limit, but a more general image of the problems with luggage exceeding the given limits.
+An American website for statistics,\citep{airstat}, shows the amount of fees given in context to luggage that have been registered at the U.S. airlines. Through these statistics it is possible to see, \textbf{there are people that exceed the set of limits given by the airline.} A note regarding this source is that the size of the fee is a combination of the different rules and related fees. Therefore the statistics do not give an accurate image of the problem with weight limit, but a more general image of the problems with luggage exceeding the given limits.
 
-The problem with packing luggage is mostly the same if it is by train, car, or flights. But flights is the one transport where it plays the biggest role for the traveller because it have economical consequences. With train and car it is more of less up to the traveller how heavy the luggage is allowed to be but there is restriction to how big the bags are allowed to be in the train. For train it is 100 x 60 x 30 cm \citep{rulestrain}, for cars it is the size of the car and number of passages that defines how big the suitcases can be for the journey to be safe.
+The problem with packing luggage is mostly the same if it is by train, car, or flights. But flights is the one transport where it plays the biggest role for the traveller because it has economical consequences. With train and car it is more of less up to the traveller how heavy the luggage is allowed to be but there are restrictions to how big the bags are allowed to be in the train. For train it is 100 x 60 x 30 cm \citep{rulestrain}, for cars it is the size of the car and number of passages that defines how big the suitcases can be for the journey to be safe.
 
 When going on vacation, and using the car as transportation, the size of the car sets the limit in size of the luggage, since you cannot just pay to get more luggage with you than fits into your car. When packing a car it is important to place the heaviest of the luggage just behind the back seats and evenly spread to the sides. This is to prevent the luggage from gathering momentum during an emergency brake and maybe go through the back seats. Furthermore it is to prevent over steering should the luggage be too far in the back. It is also crucial to fasten all loose objects like water bottles and the like, because in the event of a crash these items can become projectiles and deal some serious damage\citep{Farlig_bagage}.
 
